// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML to React components should generate ES5 React components 1`] = `
Object {
  "Component1": "import tw from \\"twin.macro\\";
const Label = tw.div\`block text-sm leading-5 font-medium text-gray-700\`;

const Component1 = () => <Label htmlFor=\\"price\\">Price</Label>;

export default Component1;
",
  "Component2": "import tw from \\"twin.macro\\";
const Div = tw.div\`mt-1 relative rounded-md shadow-sm\`;

import Component3 from \\"./Component3\\";
import Component5 from \\"./Component5\\";
import Component6 from \\"./Component6\\";

const Component2 = () => (
  <Div>
    <Component3></Component3>
    <Component5 />
    <Component6></Component6>
  </Div>
);

export default Component2;
",
  "Component3": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none\`;

import Component4 from \\"./Component4\\";

const Component3 = () => (
  <Div>
    <Component4></Component4>
  </Div>
);

export default Component3;
",
  "Component4": "import tw from \\"twin.macro\\";
const Span = tw.div\`text-gray-500 sm:text-sm sm:leading-5\`;

const Component4 = () => <Span>$</Span>;

export default Component4;
",
  "Component5": "import tw from \\"twin.macro\\";
const Input = tw.div\`form-input block w-full pl-7 pr-12 sm:text-sm sm:leading-5\`;

const Component5 = () => <Input id=\\"price\\" placeholder={0.0} />;

export default Component5;
",
  "Component6": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 right-0 flex items-center\`;

import Component7 from \\"./Component7\\";

const Component6 = () => (
  <Div>
    <Component7></Component7>
  </Div>
);

export default Component6;
",
  "Component7": "import tw from \\"twin.macro\\";
const Select = tw.div\`form-select h-full py-0 pl-2 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm sm:leading-5\`;

const Component7 = () => (
  <Select aria-label=\\"Currency\\">
    <option>USD</option>
    <option>CAD</option>
    <option>EUR</option>
  </Select>
);

export default Component7;
",
}
`;

exports[`HTML to React components should generate ES5 React components as CommonJS modules 1`] = `
Object {
  "Component1": "import tw from \\"twin.macro\\";
const Label = tw.div\`block text-sm leading-5 font-medium text-gray-700\`;

const Component1 = () => <Label htmlFor=\\"price\\">Price</Label>;

export default Component1;
",
  "Component2": "import tw from \\"twin.macro\\";
const Div = tw.div\`mt-1 relative rounded-md shadow-sm\`;

import Component3 from \\"./Component3\\";
import Component5 from \\"./Component5\\";
import Component6 from \\"./Component6\\";

const Component2 = () => (
  <Div>
    <Component3></Component3>
    <Component5 />
    <Component6></Component6>
  </Div>
);

export default Component2;
",
  "Component3": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none\`;

import Component4 from \\"./Component4\\";

const Component3 = () => (
  <Div>
    <Component4></Component4>
  </Div>
);

export default Component3;
",
  "Component4": "import tw from \\"twin.macro\\";
const Span = tw.div\`text-gray-500 sm:text-sm sm:leading-5\`;

const Component4 = () => <Span>$</Span>;

export default Component4;
",
  "Component5": "import tw from \\"twin.macro\\";
const Input = tw.div\`form-input block w-full pl-7 pr-12 sm:text-sm sm:leading-5\`;

const Component5 = () => <Input id=\\"price\\" placeholder={0.0} />;

export default Component5;
",
  "Component6": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 right-0 flex items-center\`;

import Component7 from \\"./Component7\\";

const Component6 = () => (
  <Div>
    <Component7></Component7>
  </Div>
);

export default Component6;
",
  "Component7": "import tw from \\"twin.macro\\";
const Select = tw.div\`form-select h-full py-0 pl-2 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm sm:leading-5\`;

const Component7 = () => (
  <Select aria-label=\\"Currency\\">
    <option>USD</option>
    <option>CAD</option>
    <option>EUR</option>
  </Select>
);

export default Component7;
",
}
`;

exports[`HTML to React components should generate ES5 React components as ES6 modules 1`] = `
Object {
  "Component1": "import tw from \\"twin.macro\\";
const Label = tw.div\`block text-sm leading-5 font-medium text-gray-700\`;

const Component1 = () => <Label htmlFor=\\"price\\">Price</Label>;

export default Component1;
",
  "Component2": "import tw from \\"twin.macro\\";
const Div = tw.div\`mt-1 relative rounded-md shadow-sm\`;

import Component3 from \\"./Component3\\";
import Component5 from \\"./Component5\\";
import Component6 from \\"./Component6\\";

const Component2 = () => (
  <Div>
    <Component3></Component3>
    <Component5 />
    <Component6></Component6>
  </Div>
);

export default Component2;
",
  "Component3": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none\`;

import Component4 from \\"./Component4\\";

const Component3 = () => (
  <Div>
    <Component4></Component4>
  </Div>
);

export default Component3;
",
  "Component4": "import tw from \\"twin.macro\\";
const Span = tw.div\`text-gray-500 sm:text-sm sm:leading-5\`;

const Component4 = () => <Span>$</Span>;

export default Component4;
",
  "Component5": "import tw from \\"twin.macro\\";
const Input = tw.div\`form-input block w-full pl-7 pr-12 sm:text-sm sm:leading-5\`;

const Component5 = () => <Input id=\\"price\\" placeholder={0.0} />;

export default Component5;
",
  "Component6": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 right-0 flex items-center\`;

import Component7 from \\"./Component7\\";

const Component6 = () => (
  <Div>
    <Component7></Component7>
  </Div>
);

export default Component6;
",
  "Component7": "import tw from \\"twin.macro\\";
const Select = tw.div\`form-select h-full py-0 pl-2 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm sm:leading-5\`;

const Component7 = () => (
  <Select aria-label=\\"Currency\\">
    <option>USD</option>
    <option>CAD</option>
    <option>EUR</option>
  </Select>
);

export default Component7;
",
}
`;

exports[`HTML to React components should generate ES6 React components 1`] = `
Object {
  "Component1": "import tw from \\"twin.macro\\";
const Label = tw.div\`block text-sm leading-5 font-medium text-gray-700\`;

const Component1 = () => <Label htmlFor=\\"price\\">Price</Label>;

export default Component1;
",
  "Component2": "import tw from \\"twin.macro\\";
const Div = tw.div\`mt-1 relative rounded-md shadow-sm\`;

import Component3 from \\"./Component3\\";
import Component5 from \\"./Component5\\";
import Component6 from \\"./Component6\\";

const Component2 = () => (
  <Div>
    <Component3></Component3>
    <Component5 />
    <Component6></Component6>
  </Div>
);

export default Component2;
",
  "Component3": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none\`;

import Component4 from \\"./Component4\\";

const Component3 = () => (
  <Div>
    <Component4></Component4>
  </Div>
);

export default Component3;
",
  "Component4": "import tw from \\"twin.macro\\";
const Span = tw.div\`text-gray-500 sm:text-sm sm:leading-5\`;

const Component4 = () => <Span>$</Span>;

export default Component4;
",
  "Component5": "import tw from \\"twin.macro\\";
const Input = tw.div\`form-input block w-full pl-7 pr-12 sm:text-sm sm:leading-5\`;

const Component5 = () => <Input id=\\"price\\" placeholder={0.0} />;

export default Component5;
",
  "Component6": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 right-0 flex items-center\`;

import Component7 from \\"./Component7\\";

const Component6 = () => (
  <Div>
    <Component7></Component7>
  </Div>
);

export default Component6;
",
  "Component7": "import tw from \\"twin.macro\\";
const Select = tw.div\`form-select h-full py-0 pl-2 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm sm:leading-5\`;

const Component7 = () => (
  <Select aria-label=\\"Currency\\">
    <option>USD</option>
    <option>CAD</option>
    <option>EUR</option>
  </Select>
);

export default Component7;
",
}
`;

exports[`HTML to React components should generate file names in lowercase with the specified delimiter 1`] = `
Object {
  "Component1": "import tw from \\"twin.macro\\";
const Label = tw.div\`block text-sm leading-5 font-medium text-gray-700\`;

const Component1 = () => <Label htmlFor=\\"price\\">Price</Label>;

export default Component1;
",
  "Component2": "import tw from \\"twin.macro\\";
const Div = tw.div\`mt-1 relative rounded-md shadow-sm\`;

import Component3 from \\"./component3\\";
import Component5 from \\"./component5\\";
import Component6 from \\"./component6\\";

const Component2 = () => (
  <Div>
    <Component3></Component3>
    <Component5 />
    <Component6></Component6>
  </Div>
);

export default Component2;
",
  "Component3": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none\`;

import Component4 from \\"./component4\\";

const Component3 = () => (
  <Div>
    <Component4></Component4>
  </Div>
);

export default Component3;
",
  "Component4": "import tw from \\"twin.macro\\";
const Span = tw.div\`text-gray-500 sm:text-sm sm:leading-5\`;

const Component4 = () => <Span>$</Span>;

export default Component4;
",
  "Component5": "import tw from \\"twin.macro\\";
const Input = tw.div\`form-input block w-full pl-7 pr-12 sm:text-sm sm:leading-5\`;

const Component5 = () => <Input id=\\"price\\" placeholder={0.0} />;

export default Component5;
",
  "Component6": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 right-0 flex items-center\`;

import Component7 from \\"./component7\\";

const Component6 = () => (
  <Div>
    <Component7></Component7>
  </Div>
);

export default Component6;
",
  "Component7": "import tw from \\"twin.macro\\";
const Select = tw.div\`form-select h-full py-0 pl-2 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm sm:leading-5\`;

const Component7 = () => (
  <Select aria-label=\\"Currency\\">
    <option>USD</option>
    <option>CAD</option>
    <option>EUR</option>
  </Select>
);

export default Component7;
",
}
`;

exports[`HTML to React components should generate stateless React components 1`] = `
Object {
  "Component1": "import tw from \\"twin.macro\\";
const Label = tw.div\`block text-sm leading-5 font-medium text-gray-700\`;

const Component1 = () => <Label htmlFor=\\"price\\">Price</Label>;

export default Component1;
",
  "Component2": "import tw from \\"twin.macro\\";
const Div = tw.div\`mt-1 relative rounded-md shadow-sm\`;

import Component3 from \\"./Component3\\";
import Component5 from \\"./Component5\\";
import Component6 from \\"./Component6\\";

const Component2 = () => (
  <Div>
    <Component3></Component3>
    <Component5 />
    <Component6></Component6>
  </Div>
);

export default Component2;
",
  "Component3": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none\`;

import Component4 from \\"./Component4\\";

const Component3 = () => (
  <Div>
    <Component4></Component4>
  </Div>
);

export default Component3;
",
  "Component4": "import tw from \\"twin.macro\\";
const Span = tw.div\`text-gray-500 sm:text-sm sm:leading-5\`;

const Component4 = () => <Span>$</Span>;

export default Component4;
",
  "Component5": "import tw from \\"twin.macro\\";
const Input = tw.div\`form-input block w-full pl-7 pr-12 sm:text-sm sm:leading-5\`;

const Component5 = () => <Input id=\\"price\\" placeholder={0.0} />;

export default Component5;
",
  "Component6": "import tw from \\"twin.macro\\";
const Div = tw.div\`absolute inset-y-0 right-0 flex items-center\`;

import Component7 from \\"./Component7\\";

const Component6 = () => (
  <Div>
    <Component7></Component7>
  </Div>
);

export default Component6;
",
  "Component7": "import tw from \\"twin.macro\\";
const Select = tw.div\`form-select h-full py-0 pl-2 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm sm:leading-5\`;

const Component7 = () => (
  <Select aria-label=\\"Currency\\">
    <option>USD</option>
    <option>CAD</option>
    <option>EUR</option>
  </Select>
);

export default Component7;
",
}
`;

exports[`HTML to React components should transform inline CSS properly 1`] = `Object {}`;

exports[`HTML to React components should transform public HTML attrbiutes into React props 1`] = `Object {}`;
